img and logo fixed and aligned

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ NAVIGATION
 .logo__text {
     font-size: 24px;
     font-weight: bold;
+    margin: 0px 24px 0 0;
     /*padding-right: 560px;*/
 }
 
